Improve validation